--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@
 								</section>
 								<section>	
 									<span class="icon solid major fa-cog"></span>							
-									<h3><a href="https://public.tableau.com/app/profile/azmina6434#!/">Data Visulization Using Tableau</h3></a></p>
+									<h3><a href="https://public.tableau.com/app/profile/azmina6434#!/">Data Visualization Using Tableau</h3></a></p>
 									<p>Using Tableau to visualize the Suicide deaths statistics globally.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>Sed erat ullam corper</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<h3><a href="https://github.com/AzminaSayyed/Portfolio/blob/main/Data%20Cleaning%20SQL%20queries">Data Cleaning in SQL</h3></a></p>
+									<p>Data cleaning is a very important aspect of Data analysis. In this project I have used Excel spreadsheet in built tools followed by SQL queries to clean up the dataset</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
