--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>Web scraping using Python</h3>
-									<p>Python librarires have been used to scrape data from an e-commerce website in this project. </p>
+									<h3> <a href= "https://github.com/AzminaSayyed/Portfolio/blob/main/Python%20Script%20-%20Sales%20Data%20Analysis ">Exploratory Data Analysis Using Python</h3></a></p>
+									<p>Python librarires such as NumPy, Pandas and Matplotlib have been used to explore,analyze and Visualize sample sales data . </p>
 								</section>
 								
 								
