--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 							<div class="content">
 								<div class="inner">
 									<h2>AZMINA SAYYED</h2>
-									<p>A LIFE-LONG LEARNER is what I would like to describe myself as. As a former teacher and I can vouch that teach and learn is a life-long process that everybody goes through in their life.
-										My colleagues and friends seldom say that I am a friendly, energetic, and reliable person.
+									<p>A LIFE-LONG LEARNER is what I would like to describe myself as. A former teacher who believes that teaching and learning is a life-long process that everybody goes through in their life.
+										My colleagues and friends often say that I am a friendly, energetic, and reliable person.
 										
 									</p>
 									<ul class="actions">
@@ -67,7 +67,7 @@
 						<div class="inner">
 							<h2>Portfolio Projects</h2>
 							<p>AT A GLANCE -  
-								As I start my journey as a data analyst I would like to share few projects that worked upon after self-studying. </p>
+								As I look forward towards starting my journey as a data analyst I would like to share few projects that I have worked upon after self-studying. </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-cog"></span>
