--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3><a  href="https://github.com/AzminaSayyed/Portfoilio">Data Exploration in SQL</h3></a></p>
-									<p>Using SQL queries to find out different aspects of the data .</p>
+									<p> Wrote SQL queries to explore different aspects of the data .</p>
 								</section>
 								<section>	
 									<span class="icon solid major fa-cog"></span>							
 									<h3><a href="https://public.tableau.com/app/profile/azmina6434#!/">Data Visualization Using Tableau</h3></a></p>
-									<p>Using Tableau to visualize the Suicide deaths statistics globally.</p>
+									<p>Used Tableau to visualize the Suicide deaths statistics globally.</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
