--- a/index.html
+++ b/index.html
@@ -67,22 +67,33 @@
 						<div class="inner">
 							<h2>Portfolio Projects</h2>
 							<p>AT A GLANCE -  
-								As I look forward towards starting my journey as a data analyst I would like to share few projects that I have worked upon after self-studying. </p>
+								As I look forward towards starting my journey as a data analyst I would like to share few projects that I have worked on. </p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3><a  href="https://github.com/AzminaSayyed/Portfoilio">Data Exploration in SQL</h3></a></p>
-									<p> Wrote SQL queries to explore different aspects of the data .</p>
+									<p> <ul type = "disc">
+										<li>Gathered and organized data to be able to perform analysis.</li>
+										<li>Sorted and filtered data using SQL queries to get only the relevant columns for further analysis.</li>
+										<li>Analyzed Data using SQL queries to get solutions to queries.</li>
+										<li>Converted data to its relevant data types to perform analysis.</li>
+										<li>Cleaned data using SQL to remove columns that have a high number of missing values and selecting relevant columns for data analysis.</li>
+									</ul>							
+										
+										 </p>
 								</section>
 								<section>	
 									<span class="icon solid major fa-cog"></span>							
 									<h3><a href="https://public.tableau.com/app/profile/azmina6434#!/">Data Visualization Using Tableau</h3></a></p>
-									<p>Used Tableau to visualize the Suicide deaths statistics globally.</p>
+									<p><ul type = "disc"></ul> 
+										<li>Created visualizations using Tableau to present the analysis of the Global Suicide Deaths dataset.</li>
+										<li>Used Dashboards and Storytelling to visualize the Global Suicide numbers and Kansas housing rates pertaining to different zip codes.</li>
+										</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
 									<h3><a href="https://github.com/AzminaSayyed/Portfolio/blob/main/Data%20Cleaning%20SQL%20queries">Data Cleaning in SQL</h3></a></p>
-									<p>Data cleaning is a very important aspect of Data analysis. In this project I have used Excel spreadsheet in built tools followed by SQL queries to clean up the dataset</p>
+									<p>Data cleaning is a very important aspect of Data analysis. Used Excel formulas and functions followed by SQL queries to clean up the dataset</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
